# gear-js

./: .dockerignore  .env.example  .eslintrc  .eslintrc.js  .eslintrc.json  .gitignore  .gitmodules  .npmignore  .prettierrc  .yarnrc.yml  Cargo.toml  JSONRPC-API.md  Makefile  README.md  biome.json  config.d.ts  craco.config.js  docker-compose.yml  eslint.config.mjs  gear-js.sh  lerna.json  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  rust-toolchain.toml  tsconfig.build.json  tsconfig.json
api/dev/error_registry/: Cargo.toml  registry
api/dev/error_registry/src/: main.rs
api/examples/gear-program/: Cargo.toml
api/examples/gear-program/src/: lib.rs
api/programs/: Cargo.toml  rust-toolchain.toml
api/programs/empty/: Cargo.toml
api/programs/empty/src/: lib.rs
api/programs/test/: Cargo.toml
api/programs/test-gas/: .metahash  Cargo.toml  test_gas.meta.txt
api/programs/test-gas/io/: Cargo.toml
api/programs/test-gas/io/src/: lib.rs
api/programs/test-gas/src/: lib.rs  wasm.rs
api/programs/test-meta/: Cargo.toml  build.rs  test_meta.meta.txt
api/programs/test-meta-union/: Cargo.toml  build.rs
api/programs/test-meta-union/io/: Cargo.toml
api/programs/test-meta-union/io/src/: lib.rs
api/programs/test-meta-union/src/: lib.rs  wasm.rs
api/programs/test-meta-union/state-v1/: Cargo.toml
api/programs/test-meta-union/state-v1/src/: wasm.rs
api/programs/test-meta-union/state-v2/: Cargo.toml
api/programs/test-meta-union/state-v2/src/: wasm.rs
api/programs/test-meta/io/: Cargo.toml
api/programs/test-meta/io/src/: lib.rs
api/programs/test-meta/src/: lib.rs  wasm.rs
api/programs/test-meta/state-v1/: Cargo.toml
api/programs/test-meta/state-v2/: Cargo.toml
api/programs/test-union/: Cargo.toml
api/programs/test-waitlist/: Cargo.toml
api/programs/test-waitlist/src/: lib.rs
api/programs/test/src/: lib.rs
api/test/programs/test-gas/: Cargo.toml  build.rs
api/test/programs/test-meta/: .metahash  Cargo.toml  build.rs  meta.txt  test_meta.meta.txt
api/test/programs/test-syscall-in-state/: Cargo.toml
api/test/programs/test-waitlist/: .binpath  Cargo.toml
apis/gear/programs/test-meta/: Cargo.toml
apis/gearexe/: Cargo.toml  README.md  jest.config.ts  package.json  rollup.config.js  run-tests.sh  tsconfig.build.json  tsconfig.json
apis/gearexe/abi/: IMirror.json  IRouter.json  IWrappedVara.json
apis/gearexe/contracts/: Counter.sol
apis/gearexe/lib/: index.js
apis/gearexe/lib/api/: api.d.ts  api.js
apis/gearexe/lib/eth/: mirror.d.ts  mirror.js  router.d.ts  router.js  wrappedVara.d.ts  wrappedVara.js
apis/gearexe/lib/provider/: http.d.ts  http.js  jsonrpc.d.ts  jsonrpc.js  ws.d.ts  ws.js
apis/gearexe/lib/types/: index.d.ts  jsonrpc.d.ts  provider.d.ts
apis/gearexe/lib/util/: event.d.ts  event.js  index.d.ts  maybe-hash.d.ts  maybe-hash.js  snake-camel.d.ts  snake-camel.js
apis/gearexe/programs/counter/: Cargo.toml
apis/gearexe/programs/counter-idl/: Cargo.toml  build.rs  counter.idl
apis/gearexe/scripts/: Counter.s.sol  convert-abi.mjs  run-tests-anvil.sh  run-tests.sh  setup-anvil.sh  setup-env.sh  test.env
apis/gearexe/src/api/: api.ts  injected.ts
apis/gearexe/src/eth/: enum.ts  ethereumClient.ts  index.ts  mirror.ts  router.ts  tx-manager.ts  util.ts  wrappedVara.ts
apis/gearexe/src/provider/: http.ts  jsonrpc.ts  ws.ts
apis/gearexe/src/signer/: index.ts
apis/gearexe/src/types/: index.ts  jsonrpc.ts  provider.ts
apis/gearexe/src/util/: bigint.ts  event.ts  index.ts  maybe-hash.ts
apis/gearexe/test/: account.test.ts  block-ws.test.ts  block.test.ts  common.ts  config.ts  injected.test.ts  mirror.test.ts  program.test.ts  router.test.ts  setup.js  setup.ts  testSequencer.js  wvara.test.ts
apis/gearexe/test/provider/: ws.mock.ts  ws.test.ts
apis/gearexe/test/signer/: test-fixtures.ts
apis/gearexe/test/solidity/: RouterDeployment.s.sol
apis/vara-eth/: CHANGELOG.md  Cargo.toml  README.md  foundry.toml  jest.config.ts  jest.unit.config.ts  package.json  rollup.config.js  tsconfig.json  tsconfig.test.json  vitest.config.ts  vitest.unit.config.ts
apis/vara-eth/contracts/: Counter.sol
apis/vara-eth/programs/counter-idl/: Cargo.toml  build.rs  counter.idl  counter_idl.idl
apis/vara-eth/programs/injected/: Cargo.toml
apis/vara-eth/programs/ping/: Cargo.toml  build.rs
apis/vara-eth/scripts/: Counter.s.sol  anvil.env  common.mjs  poc-wallet.ts  run-tests-anvil.sh  run-tests.mjs  setup-anvil.sh  setup-local-env.mjs  test.env  tsconfig.poc.json
apis/vara-eth/src/: index.ts
apis/vara-eth/src/api/: api.ts  factory.ts  index.ts  injected.ts  rpc.ts
apis/vara-eth/src/errors/: index.ts  reply-code.ts  vara-eth-error.ts
apis/vara-eth/src/eth/: base-contract.ts  ethereumClient.ts  index.ts  mirror.ts  router.ts  tx-manager.ts  wrappedVara.ts
apis/vara-eth/src/programs/: index.ts
apis/vara-eth/src/provider/: http.ts  index.ts  jsonrpc.ts  util.ts  validator-pool.ts  ws.ts
apis/vara-eth/src/signer/: errors.ts  index.ts
apis/vara-eth/src/types/: index.ts  jsonrpc.ts  provider.ts  signer.ts
apis/vara-eth/src/util/: blob.ts  constants.ts  error.ts  event.ts  hash.ts  index.ts  maybe-hash.ts  normalize.ts  promise.ts  signature.ts  snake-camel.ts  transformers.ts  validation.ts  viem-fork.ts
apis/vara-eth/test/: block-http.test.ts  block-ws.test.ts  code.test.ts  common.ts  config.ts  create-program-builder.test.ts  injected-legacy.test.ts  injected.test.ts  mirror.test.ts  program-queries.test.ts  router.test.ts  setup.ts  testSequencer.js  wvara.test.ts
apis/vara-eth/test/provider/: ws.integration.test.ts  ws.mock.ts  ws.test.ts
apis/vara-eth/test/setup/: setup.ts  teardown.ts  testSequencer.js  testSequencer.ts
apis/vara-eth/test/unit/: idl-extract.test.ts  injected-signing.fixture.test.ts  injected-stale-block.test.ts  local-signer.test.ts  message-reverted.test.ts  programs-deploy-timeout.test.ts  programs-send-and-wait.test.ts  stream.test.ts  util.test.ts
idea/tests/programs/: Cargo.toml
idea/tests/programs/ping-sails/: README.md
(+8810 files in other folders)
