[workspace.package]
version = "0.0.1"
authors = ["Gear Technologies"]
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/gear-tech/gear-js"
rust-version = "1.91"

[workspace]
resolver = "2"
members = [
    "apis/gear/programs/test",
    "apis/gear/programs/message",
]

[workspace.dependencies]
gstd = { git = "https://github.com/gear-tech/gear" }
scale-info = { version = "=2.11", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "=3.7.5", default-features = false, features = ["derive", "full"] }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear" }
primitive-types = { version = "0.12.2", default-features = false }
