[workspace.package]
version = "0.0.1"
authors = ["Gear Technologies"]
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/gear-tech/gear-js"

[workspace]
resolver = "3"
members = ["programs/counter", "programs/counter-idl"]

[workspace.dependencies]
sails-rs = { version = "0.8.0", features = [
    "ethexe",
    "wasm-builder",
    "idl-gen",
] }
