[workspace.package]
version = "0.0.1"
authors = ["Gear Technologies"]
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/gear-tech/gear-js"

[workspace]
resolver = "3"
members = ["programs/counter", "programs/counter-idl", "programs/injected"]

[workspace.dependencies]
sails-rs = "0.9.2"
ethexe-common = { git = "https://github.com/gear-tech/gear" }
