[workspace.package]
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/gear-tech/gear-js"

[workspace]
resolver = "3"
members = ["programs/counter", "programs/counter-idl", "programs/injected"]

[workspace.dependencies]
sails-rs = "0.10.3"
ethexe-common = { git = "https://github.com/gear-tech/gear", branch = "av/ethexe-cli-configurable" }
gear-core = { git = "https://github.com/gear-tech/gear", branch = "av/ethexe-cli-configurable" }
gear-core-errors = { git = "https://github.com/gear-tech/gear", branch = "av/ethexe-cli-configurable" }
hex = "0.4"
