[package]
name = "test-gas"
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git" }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.4.0", default-features = false, features = ["derive", "full"] }
test-gas-io = { path = "io" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }
test-gas-io = { path = "io" }
