[package]
name = "test-gas"
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2021"

[dependencies]
gstd.workspace = true
scale-info.workspace = true
codec.workspace = true
test-gas-io = { path = "io" }

[build-dependencies]
gear-wasm-builder.workspace = true
test-gas-io = { path = "io" }
