[package]
name = "test-meta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git" }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive", "full"] }
test-meta-io = { path = "io" }
test-meta-state-v1 = { path = "state-v1", default-features = false, optional = true }
test-meta-state-v2 = { path = "state-v2", default-features = false, optional = true }

[build-dependencies]
test-meta-io = { path = "io" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }


[features]
default = ["std"]
std = ["codec/std"]
