[package]
name = "test-waitlist"
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git" }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false, features = ["derive", "full"] }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }
