[package]
name = "test-gas-io"
version = "0.1.0"
edition = "2021"

[dependencies]
gmeta = { git = "https://github.com/gear-tech/gear.git" }
scale-info = { version = "2.11.0", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive", "full"] }
gstd = { git = "https://github.com/gear-tech/gear.git" }
