[package]
name = "test-meta-state-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd.workspace = true
gmeta = { workspace = true, features = ["codegen"] }
test-meta-io = { path = "../io" }

[build-dependencies]
gear-wasm-builder = { workspace = true, features = ["metawasm"] }

[features]
default = ["std"]
std = []
