[package]
name = "test-syscall-in-state"
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable"  }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive", "full"] }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }
