[package]
name = "test-waitlist"
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive", "full"] }

[profile.release]
lto = true
opt-level = 's'
