[package]
name = "counter"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sails-rs = { git = "https://github.com/gear-tech/sails", features = ["ethexe"] }

[build-dependencies]
sails-rs = { git = "https://github.com/gear-tech/sails", features = ["ethexe", "wasm-builder"] }
