[package]
name = "test-gas-io"
version = "0.1.0"
edition = "2021"

[dependencies]
gmeta = { git = "https://github.com/gear-tech/gear.git", rev = "ad5b6a8bfb18c15f54eee9c402dc273524967265" }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive", "full"] }
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "ad5b6a8bfb18c15f54eee9c402dc273524967265" }