[package]
name = "test-meta-io"
version = "0.1.0"
edition = "2021"

[dependencies]
gmeta = { git = "https://github.com/gear-tech/gear.git", rev = "b4a3aa6735c21c42d4fd7b5c2dd1dfd5eb9f4f57" }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive", "full"] }
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "b4a3aa6735c21c42d4fd7b5c2dd1dfd5eb9f4f57" }
primitive-types = { version = "0.12.1", default-features = false }
