[package]
name = "test-meta-state-v1"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git" }
gmeta = { git = "https://github.com/gear-tech/gear.git", features = ["codegen"], rev = "653b4b338c83567cb1a3eda38df782fabea05187"  }
test-meta-io = { path = "../io" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", features = ["metawasm"], rev = "653b4b338c83567cb1a3eda38df782fabea05187" }

[features]
default = ["std"]
std = []
