[package]
name = "wrapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.80" }
gstd = { path = "/Users/dmitriiosipov/gear/gear/gstd", features = ["no_handlers"] }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }